--- a/_includes/education.html
+++ b/_includes/education.html
@@ -8,7 +8,7 @@
   </h2>
 
   {% for graduation in education %}
-  <div class="item">s
+  <div class="item">
     <h4 class="degree">{{ graduation.degree }}</h4>
     <h5 class="meta">{{ graduation.university }}</h5>
     <div class="time">{{ graduation.time }}</div>
