--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -19,6 +19,7 @@
         <div class="time">{{ experience.time }}</div>
       </div><!--//upper-row-->
 
+      <img class="logo" src="{{ site.baseurl }}/assets/images/{{ experience.logo }}" alt="company logo" />
       <div class="company">{{ experience.company }}</div>
 
     </div><!--//meta-->
@@ -34,4 +35,3 @@
 
 </section><!--//section-->
 {% endif %}
-
