--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -20,8 +20,8 @@
       </div><!--//upper-row-->
 
       <div class="company">
-        <span>
-          <img height="50px" width="auto" src="{{ site.baseurl }}/assets/images/{{ experience.logo }}"
+        <span style="padding-right: 10px;">
+          <img height="100px" width="auto" src="{{ site.baseurl }}/assets/images/{{ experience.logo }}"
             alt="company logo" />
         </span>
         {{ experience.company }}
