Update company logo

--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -20,7 +20,7 @@
       </div><!--//upper-row-->
 
       <div class="company">
-        <span style="padding-right: 10px;">
+        <span class="{{ experience.logo-class }}">
           <img height="50px" width="auto" src="{{ site.baseurl }}/assets/images/{{ experience.logo }}"
             alt="company logo" />
         </span>
