Update company logo

--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -20,9 +20,9 @@
       </div><!--//upper-row-->
 
       <div class="company">
-        <span class="{{ experience.logo-class }}">
-          <img height="50px" width="auto" src="{{ site.baseurl }}/assets/images/{{ experience.logo }}"
-            alt="company logo" />
+        <span>
+          <img class="{{ experience.logo-class }}" height="50px" width="auto"
+            src="{{ site.baseurl }}/assets/images/{{ experience.logo }}" alt="company logo" />
         </span>
         {{ experience.company }}
       </div>
