--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,14 +20,14 @@
   {% include contact.html %}
 
   {% if sidebar.education %}
-  {% include education.html %}
+    {% include education.html %}
   {% endif %}
 
   {% include language.html %}
   {% include interests.html %}
 
-  <!-- {% if sidebar.about %} -->
-  <!-- {% include about.html %} -->
-  <!-- {% endif %} -->
+  {% if sidebar.about %}
+    {% include about.html %}
+  {% endif %}
 
 </div><!--//sidebar-wrapper-->
