Update for exp and formot

--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -30,7 +30,7 @@
     </div><!--//meta-->
 
     {% if experience.website %}
-    <div class="details">
+    <div class="company-website">
       {{ experience.website | markdownify }}
     </div><!--//website-->
     {% endif %}
