--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -237,6 +237,10 @@ p {
         color: $text-grey;
     }
 
+    .company-website {
+        text-decoration: underline;
+    }
+
     .project-title {
         font-size: 16px;
         font-weight: 400;
